--- a/css/main.css
+++ b/css/main.css
@@ -31,33 +31,33 @@ html ::-webkit-scrollbar {
   }
 }
 
-@media screen and (min-width: 200px) and (min-height: 200px) {
+@media screen and (min-width: 200px) {
   html {
     font-size: 8px;
   }
 }
 
-@media screen and (min-width: 400px) and (min-height: 400px) {
+@media screen and (min-width: 400px) {
   html {
     font-size: 9px;
   }
 }
 
-@media screen and (min-width: 500px) and (min-height: 500px) {
+@media screen and (min-width: 500px) {
   html {
     font-size: 10px;
   }
 }
 
-@media screen and (min-width: 800px) and (min-height: 800px) {
+@media screen and (min-width: 800px) {
   html {
     font-size: 12px;
   }
 }
 
-@media screen and (min-width: 1000px) and (min-height: 1000px) {
+@media screen and (min-width: 900px) {
   html {
-    font-size: 12px;
+    font-size: 10px;
   }
 }
 
@@ -67,7 +67,7 @@ body {
   font-size: 2rem;
   line-height: 1.3;
   color: #000;
-  background-color: #fafafa;
+  background-color: lightgray;
   overflow-x: hidden;
 }
 
@@ -91,8 +91,8 @@ a:focus {
 }
 
 .wrapper {
-  padding-left: 1px;
-  padding-right: 1px;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
 }
 
 .wrapper nav {
@@ -107,6 +107,14 @@ a:focus {
   z-index: 9999;
 }
 
+.wrapper nav img {
+  display: inline-block;
+  position: relative;
+  top: 0.2em;
+  height: 1em;
+  background-image: none;
+}
+
 .wrapper nav h1 {
   display: inline-block;
   font-size: 3rem;
@@ -114,11 +122,12 @@ a:focus {
 }
 
 .wrapper nav #theses-info {
-  margin-right: 5px;
+  margin-right: 2.6rem;
+  text-decoration: underline;
 }
 
-.wrapper nav #theses-info.selected {
-  text-decoration: underline;
+.wrapper nav #theses-info:hover {
+  text-transform: uppercase;
 }
 
 .wrapper .container {
@@ -126,7 +135,7 @@ a:focus {
   width: 100%;
 }
 
-@media screen and (min-width: 540px) and (min-height: 540px) {
+@media screen and (min-width: 540px) {
   .wrapper .container {
     padding-top: 6.6rem;
   }
@@ -145,19 +154,17 @@ a:focus {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding-top: 0.65rem;
 }
 
-@media screen and (min-width: 1000px) and (min-height: 1000px) {
+@media screen and (min-width: 900px) {
   .wrapper .container .person {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    padding-top: 0;
   }
-}
-
-.wrapper .container .person .person-name {
-  font-family: 'Font Bold';
 }
 
 .wrapper .container .person .person-name,
@@ -174,24 +181,24 @@ a:focus {
 .wrapper .container .person .person-thesis-content {
   display: none;
   position: fixed;
-  width: 100%;
-  height: 50vh;
+  width: 90vw;
+  height: 90vh;
+  margin: auto;
+  top: 0;
+  right: 0;
   bottom: 0;
-  border-top: 1px solid #000;
-  z-index: 9998;
-  background-color: #fafafa;
-  overflow-y: scroll;
+  left: 0;
+  overflow: scroll;
+  background-color: #fff;
+  border: 1px solid #000;
   scrollbar-width: none;
 }
 
-@media screen and (min-width: 1000px) and (min-height: 1000px) {
+@media screen and (min-width: 900px) {
   .wrapper .container .person .person-thesis-content {
-    width: 50%;
-    height: 100vh;
-    right: 0;
-    top: 0;
-    border: none;
-    border-left: 1px solid #000;
+    width: 140vh;
+    height: 75vh;
+    max-height: 90vh;
   }
 }
 
@@ -200,11 +207,78 @@ a:focus {
 }
 
 .wrapper .container .person .person-thesis-content .person-thesis-image {
+  position: relative;
   width: 100%;
+  max-height: 100%;
+}
+
+@media screen and (min-width: 900px) {
+  .wrapper .container .person .person-thesis-content .person-thesis-image {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    height: 100%;
+  }
+}
+
+.wrapper .container .person .person-thesis-content .person-thesis-image .x-button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 2em;
+  height: 2em;
+  z-index: 9999;
+  background-color: #fff;
+  -webkit-mask-image: url(../images/cross.svg);
+  mask-image: url(../images/cross.svg);
+  -webkit-transition: -webkit-transform 0.4s ease-in-out;
+  transition: -webkit-transform 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out, -webkit-transform 0.4s ease-in-out;
+}
+
+.wrapper .container .person .person-thesis-content .person-thesis-image .x-button:hover {
+  -webkit-transform: scale(0.85);
+          transform: scale(0.85);
+}
+
+.wrapper .container .person .person-thesis-content .person-thesis-image .website-link {
+  width: 2em;
+  height: 2em;
+  position: absolute;
+  top: 0;
+  left: 2em;
+  background-color: #fff;
+  -webkit-mask-image: url(../images/link3.svg);
+  mask-image: url(../images/link3.svg);
+  -webkit-transition: -webkit-transform 0.4s ease-in-out;
+  transition: -webkit-transform 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out, -webkit-transform 0.4s ease-in-out;
+}
+
+.wrapper .container .person .person-thesis-content .person-thesis-image .website-link a {
+  width: inherit;
+  height: inherit;
+  display: inline-block;
+}
+
+.wrapper .container .person .person-thesis-content .person-thesis-image .website-link:hover {
+  -webkit-transform: scale(0.85);
+          transform: scale(0.85);
 }
 
 .wrapper .container .person .person-thesis-content .person-thesis-text {
   padding: 0.65rem 1.43rem;
+}
+
+@media screen and (min-width: 900px) {
+  .wrapper .container .person .person-thesis-content .person-thesis-text {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 25%;
+  }
 }
 
 .wrapper .container .person .person-thesis-content .person-thesis-text h3 {
@@ -217,41 +291,22 @@ a:focus {
   border-top: 1px solid #000;
 }
 
-.wrapper .container .person .person-thesis-content .person-thesis-text a {
-  font-family: 'Font Bold';
-}
-
 .wrapper .container #theses-info-content {
   display: none;
   position: fixed;
-  width: 100%;
-  height: 50vh;
-  bottom: 0;
-  background-color: #fafafa;
-  border-top: 1px solid #000;
-}
-
-@media screen and (min-width: 1000px) and (min-height: 1000px) {
-  .wrapper .container #theses-info-content {
-    padding-top: 6.6rem;
-    top: 0;
-    width: 50%;
-    height: 100%;
-    border: none;
-    border-right: 1px solid #000;
-  }
-}
-
-.wrapper .container #theses-info-content.visible {
-  display: block;
 }
 
 img {
   -o-object-fit: contain;
      object-fit: contain;
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
   background-image: url(../images/object16-Pepijn-De-Jonge_----------.jpg);
   background-size: auto 100%;
+}
+
+footer {
+  padding-top: 2.6rem;
 }
 
 ol {
