--- a/css/main.scss
+++ b/css/main.scss
@@ -57,23 +57,23 @@ html {
 
   //TODO: Responsiveness
   @media screen and (min-width: 0), (min-height: 0px) {
-    font-size: 10px;
-  }
-
-  @media screen and (min-width: 200px) {
     font-size: 8px;
   }
 
-  @media screen and (min-width: 400px) {
-    font-size: 9px;
-  }
-
-  @media screen and (min-width: 500px) {
+  @media screen and (min-width: 200px) {
     font-size: 10px;
   }
 
-  @media screen and (min-width: 800px) {
+  @media screen and (min-width: 400px) {
     font-size: 12px;
+  }
+
+  @media screen and (min-width: 500px) {
+    font-size: 13px;
+  }
+
+  @media screen and (min-width: 800px) {
+    font-size: 14px;
   }
 
   @media screen and (min-width: 900px) {
@@ -118,7 +118,7 @@ a:focus {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    z-index: 9999;
+    // z-index: 9999;
 
     img {
       display: inline-block;
