--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ body {
   font-size: 2rem;
   line-height: 1.3;
   color: #000;
-  background-color: lightgray;
+  background-color: #e1e1e1;
   overflow-x: hidden;
 }
 
@@ -104,6 +104,7 @@ a:focus {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
+  z-index: 10;
 }
 
 .wrapper nav img {
@@ -123,10 +124,6 @@ a:focus {
 .wrapper nav #theses-info {
   margin-right: 2.6rem;
   text-decoration: underline;
-}
-
-.wrapper nav #theses-info:hover {
-  text-transform: uppercase;
 }
 
 .wrapper .container {
@@ -180,6 +177,7 @@ a:focus {
 .wrapper .container .person .person-thesis-content {
   display: none;
   position: fixed;
+  z-index: 9999;
   width: 90vw;
   height: 90vh;
   margin: auto;
@@ -291,8 +289,52 @@ a:focus {
 }
 
 .wrapper .container #theses-info-content {
+  padding: 1.3rem;
+  padding-top: 2em;
+  background-color: #fff;
+  z-index: 9000;
   display: none;
+}
+
+.wrapper .container #theses-info-content.visible {
   position: fixed;
+  display: block;
+  width: 90vw;
+  height: 90vh;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+@media screen and (min-width: 900px) {
+  .wrapper .container #theses-info-content.visible {
+    width: 140vh;
+    height: 75vh;
+    max-height: 90vh;
+  }
+}
+
+.wrapper .container #theses-info-content.visible #theses-info-x-button {
+  position: absolute;
+  top: 0;
+  left: 1.3rem;
+  width: 2em;
+  height: 2em;
+  z-index: 9999;
+  background-color: #000;
+  -webkit-mask-image: url(../images/cross.svg);
+  mask-image: url(../images/cross.svg);
+  -webkit-transition: -webkit-transform 0.4s ease-in-out;
+  transition: -webkit-transform 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out, -webkit-transform 0.4s ease-in-out;
+}
+
+.wrapper .container #theses-info-content.visible #theses-info-x-button:hover {
+  -webkit-transform: scale(0.85);
+          transform: scale(0.85);
 }
 
 img {
@@ -306,6 +348,10 @@ img {
 
 footer {
   padding-top: 2.6rem;
+}
+
+footer p {
+  text-indent: 0 !important;
 }
 
 ol {
