--- a/css/main.scss
+++ b/css/main.scss
@@ -28,7 +28,7 @@ www.nedkamburov.com
 
 // Variables
 // --------------------------------
-$background-color: rgb(211, 211, 211);
+$background-color: rgb(225, 225, 225);
 $background-info-color: #fff;
 $color: #000;
 $link-color: blue;
@@ -118,7 +118,7 @@ a:focus {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    // z-index: 9999;
+    z-index: 10;
 
     img {
       display: inline-block;
@@ -137,10 +137,6 @@ a:focus {
     #theses-info {
       margin-right: $gutter-thin-h * 2;
       text-decoration: underline;
-
-      &:hover {
-        text-transform: uppercase;
-      }
     }
   }
 
@@ -183,6 +179,7 @@ a:focus {
       .person-thesis-content {
         display: none;
         position: fixed;
+        z-index: 9999;
 
         width: 90vw;
         height: 90vh;
@@ -300,27 +297,47 @@ a:focus {
     }
 
     #theses-info-content {
+      padding: $gutter-thin-h;
+      padding-top: 2em;
+      background-color: $background-info-color;
+      z-index: 9000;
       display: none;
-      position: fixed;
 
-      //   // width: 100%;
-      //   // height: 50vh;
-      //   bottom: 0;
-      //   background-color: $background-color;
-      //   border-top: 1px solid $color;
+      &.visible {
+        position: fixed;
+        display: block;
 
-      //   @media screen and (min-width: 900px) and (min-height: 900px) {
-      //     padding-top: $font-size-title * $line-height-title * 2;
-      //     top: 0;
-      //     width: 50%;
-      //     height: 100%;
-      //     border: none;
-      //     border-right: 1px solid $color;
-      //   }
+        width: 90vw;
+        height: 90vh;
+        margin: auto;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
 
-      //   &.visible {
-      //     display: block;
-      //   }
+        @media screen and (min-width: 900px) {
+          width: 140vh;
+          height: 75vh;
+          max-height: 90vh;
+        }
+        #theses-info-x-button {
+          position: absolute;
+          top: 0;
+          left: $gutter-thin-h;
+          width: 2em;
+          height: 2em;
+          z-index: 9999;
+
+          background-color: $color;
+          -webkit-mask-image: url(../images/cross.svg);
+          mask-image: url(../images/cross.svg);
+          transition: transform $duration ease-in-out;
+        }
+
+        #theses-info-x-button:hover {
+          transform: scale(0.85);
+        }
+      }
     }
   }
 }
@@ -343,6 +360,9 @@ img {
 
 footer {
   padding-top: $gutter-h;
+  p {
+    text-indent: 0 !important;
+  }
 }
 
 //     h3 {
